<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HolyBridal</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_user_email">Email Address&#8230;</string>
    <string name="placeholder_user_password">Password&#8230;</string>
    <string name="placeholder_user_password_repeat">Repeat password&#8230;</string>
    <string name="placeholder_user_reset_password">Set new password&#8230;</string>
    <string name="placeholder_user_reset_password_repeat">Re-enter new password&#8230;</string>
    <string name="btn_register">Register</string>
    <string name="lbl_user_details">YOUR DETAILS</string>
    <string name="placeholder_user_full_name">Full name&#8230;</string>
    <string name="placeholder_user_phone">Mobile number&#8230;</string>
    <string name="lbl_user_contact_method">CONTACT METHOD PREFERENCE</string>
    <string name="btn_email">Email</string>
    <string name="btn_mobile">Mobile Number</string>
    <string name="lbl_wedding_date">DATE OF WEDDING</string>
    <string name="placeholder_add_date">Add a date&#8230;</string>
    <string name="lbl_term1">By Registering you agree with the</string>
    <string name="lbl_term2">&#160;terms and conditions&#160;</string>
    <string name="lbl_term3">stated</string>
    <string name="lbl_find_supplies">Find Suppliers</string>
    <string name="placeholder_search_keyword">Enter Keyword</string>
    <string name="txv_specializedin">Specialises in&#8230;</string>
    <string name="txv_about">About&#8230;</string>
    <string name="txv_touch">Get in touch&#8230;</string>
    <string name="txv_email">Email:</string>
    <string name="txv_mobile">Tel:</string>
    <string name="txv_map">Address:</string>
    <string name="txv_website">Website:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="share_text">Download The Holy bridal and start planning your perfect wedding today! Available for iPhone &amp; Android.</string>
    <string name="share_subject"></string>
    <string name="txv_favorite_suppliers">Favourite&#160;suppliers</string>
    <string name="txv_no_favorite">You have no favourites selected</string>
    <string name="btn_filter_suppliers">FILTER SUPPLIERS</string>
    <string name="btn_select_filter_item">SELECT</string>
    <string name="txv_my_account">My&#160;Account</string>
    <string name="btn_date_of_wedding">DATE OF WEDDING?</string>
    
</resources>
