<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:paddingBottom="100dp"
            >
		    <ImageView
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imvAppLogo"
		        android:layout_width="259dp"
		        android:layout_height="152dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="63dp"
		        android:src="@drawable/app_logo" />
		
		    <EditText
		        android:id="@+id/edtUserEmail"
		        android:layout_width="288dp"
		        android:layout_height="38dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="251dp"
		        android:gravity="left|center_vertical"
		        android:hint="@string/placeholder_user_email"
		        android:paddingLeft="13dp" 
		        android:paddingRight="13dp" 
		        android:textSize="13sp"
		        android:inputType="textEmailAddress"
		        android:background="@xml/round_corner"
		        >
		    </EditText>
		    
		    <EditText
		        android:id="@+id/edtUserPassword"
		        android:layout_width="288dp"
		        android:layout_height="38dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="297dp"
		        android:gravity="left|center_vertical"
		        android:hint="@string/placeholder_user_password"
		        android:paddingLeft="13dp" 
		        android:paddingRight="13dp" 
		        android:textSize="13sp"
		        android:inputType="textPassword"
		        android:background="@xml/round_corner"
		        >
		    </EditText>
		
		    <Button
		        android:id="@+id/btnLogin"
		        android:layout_width="129dp"
		        android:layout_height="36dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="354dp"
		        android:background="@drawable/btn_login"
		        />
		    
		    <Button
		        android:id="@+id/btnForgotPassword"
		        android:layout_width="129dp"
		        android:layout_height="36dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="398dp"
		        android:background="@drawable/btn_forgot_password"
		        />
		    
		    <Button
		        android:id="@+id/btnGoRegister"
		        android:layout_width="129dp"
		        android:layout_height="36dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="474dp"
		        android:background="@drawable/btn_register"
		        />
    	</RelativeLayout>
    </ScrollView>    
</RelativeLayout>
